[build-system]
requires = ['setuptools>=64.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'llmdk'
dynamic = ['version']
description = 'LLM Development Kit for common APIs'
readme = 'README.md'
authors = [{ name = 'Rodrigo Martínez (brunneis)', email = 'dev@brunneis.com' }]
license = { file = 'LICENSE' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>=3.10'
dependencies = [
    'requests',
    'openai',
    'anthropic',
    'groq',
    'ollama',
    'huggingface-hub',
]

[tool.setuptools]
packages = ['llmdk', 'llmdk.providers']

[tool.setuptools.dynamic]
version = {attr = 'llmdk.version.__version__'}
